<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_listOfPatients"
            android:icon="@drawable/ic_check_list"
            android:title="@string/list_of_patients" />
        <item
            android:id="@+id/nav_listOfParamedic"
            android:icon="@drawable/ic_check_list"
            android:title="@string/list_of_paramedics" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/user">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/setting" />
                <item
                    android:id="@+id/nav_logOut"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>