<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/already_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="120dp"
        android:text="@string/already_have_an_account"
        android:textColor="#3A3838"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:layout_marginRight="30dp"
        android:onClick="loginButtonAction"
        android:text="@string/login"
        android:textColor="@color/RED"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/phone_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <EditText
        android:id="@+id/userName_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/username"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <EditText
        android:id="@+id/confirmPass_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:text="@string/register"
        android:textColor="@color/RED"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/fullName_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/full_name"
        android:drawablePadding="10sp"
        android:drawableTint="@color/RED"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        android:textColor="#202020"
        android:textColorHighlight="#008383"
        android:textColorHint="#3A3838"
        android:textColorLink="#FFB33939"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/RED"
        android:onClick="nextOnClick"
        android:shadowColor="#FFFFFF"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711">

        <RadioButton
            android:id="@+id/male_rdBtn"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/male"
            android:textColor="#3A3838"
            android:textColorHighlight="@color/RED"
            android:textColorLink="@color/RED"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="486dp" />

        <RadioButton
            android:id="@+id/female_rdBtn"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/female"
            android:textColor="#3A3838"
            android:textColorHighlight="@color/RED"
            android:textColorLink="@color/RED"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="486dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/select_your_gender"
        android:textColor="#3A3838"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:entries="@array/roles"
        android:paddingRight="10dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"></Spinner>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/select_your_role"
        android:textColor="#3A3838"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

</androidx.constraintlayout.widget.ConstraintLayout>